Added food menu page with cards

--- a/web development/index.html
+++ b/web development/index.html
@@ -35,6 +35,13 @@
         </div>
     </nav>
 
+    <div class="description">
+        <h3>It's not just a food it's an experience</h3>
+        <h6>The best delicious food that meet your needs.</h6>
+        <button class="order-now-btn" onclick="location.href='menu.html'">Order Now</button>
+
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </body>
