--- a/web development/index.html
+++ b/web development/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">
-            <img src="logo.png" alt="Logo"> <!-- Replace 'logo.png' with the name of your logo file -->
+            <img src="./web-images/logo.png" alt="Logo">
             Foodies
         </a>
         <!-- <a class="navbar-brand" href="#">Foodies</a> -->
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="./login.html">Login</a>
                 </li>
             </ul>
         </div>
