--- a/web development/menu.html
+++ b/web development/menu.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">
-            <img src="logo.png" alt="Logo"> Foodies
+            <img src="./web-images/logo.png" alt="Logo"> Foodies
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
@@ -34,11 +34,11 @@
         <h2 class="text-center mb-4 menu-title">Our Menu</h2>
         <div class="row">
             <!-- Card 1 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-2">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 1">
+                    <img src="./food-items/burger.jpg" class="card-img-top" alt="Food Item 1">
                     <div class="card-body">
-                        <h5 class="card-title">Spaghetti Bolognese</h5>
+                        <h5 class="card-title">Cheese Burger</h5>
                         <p class="card-price">$12.99</p>
                         <p class="card-text">Classic Italian pasta with rich Bolognese sauce.</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐☆</p>
@@ -48,11 +48,11 @@
             </div>
 
             <!-- Card 2 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-2">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 2">
+                    <img src="./food-items/croissant.jpg" class="card-img-top" alt="Food Item 2">
                     <div class="card-body">
-                        <h5 class="card-title">Grilled Chicken Salad</h5>
+                        <h5 class="card-title">croissant</h5>
                         <p class="card-price">$10.99</p>
                         <p class="card-text">Fresh greens with juicy grilled chicken.</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐⭐</p>
@@ -62,13 +62,13 @@
             </div>
 
             <!-- Card 3 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-2">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 3">
+                    <img src="./food-items/noodels.jpg" class="card-img-top" alt="Food Item 3">
                     <div class="card-body">
-                        <h5 class="card-title">Margherita Pizza</h5>
+                        <h5 class="card-title">Noodles</h5>
                         <p class="card-price">$14.99</p>
-                        <p class="card-text">Wood-fired pizza with fresh basil and mozzarella.</p>
+                        <p class="card-text">Wood-fired pizza with fresh basil.</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐☆</p>
                         <button class="btn add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -76,13 +76,13 @@
             </div>
 
             <!-- Card 4 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-4">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 4">
+                    <img src="./food-items/pizza.jpg" class="card-img-top" alt="Food Item 4">
                     <div class="card-body">
-                        <h5 class="card-title">Vegan Buddha Bowl</h5>
+                        <h5 class="card-title">Sausage pizza</h5>
                         <p class="card-price">$11.99</p>
-                        <p class="card-text">A colorful, plant-based bowl of fresh goodness.</p>
+                        <p class="card-text">A colorful, sausage pizza</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐☆</p>
                         <button class="btn add-to-cart-btn">Add to Cart</button>
                     </div>
@@ -90,11 +90,11 @@
             </div>
 
             <!-- Card 5 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-4">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 5">
+                    <img src="./food-items/veg.jpg" class="card-img-top" alt="Food Item 5">
                     <div class="card-body">
-                        <h5 class="card-title">Avocado Toast</h5>
+                        <h5 class="card-title">Vegetable Salad</h5>
                         <p class="card-price">$8.99</p>
                         <p class="card-text">Smashed avocado on toasted sourdough.</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐⭐</p>
@@ -104,13 +104,13 @@
             </div>
 
             <!-- Card 6 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 mt-4">
                 <div class="card">
-                    <img src="food-item.jpg" class="card-img-top" alt="Food Item 6">
+                    <img src="./web-images/food-item.jpg" class="card-img-top" alt="Food Item 6">
                     <div class="card-body">
-                        <h5 class="card-title">Berry Smoothie</h5>
+                        <h5 class="card-title">Cheese Burst Pizza</h5>
                         <p class="card-price">$6.99</p>
-                        <p class="card-text">A refreshing smoothie made with fresh berries.</p>
+                        <p class="card-text">A freshly prepared cheese burst pizza</p>
                         <p class="card-rating">Rating: ⭐⭐⭐⭐☆</p>
                         <button class="btn add-to-cart-btn">Add to Cart</button>
                     </div>
